Rate-Limit angepasst, DSGVO an Render angepasst

--- a/frontend/datenschutzerklärung.html
+++ b/frontend/datenschutzerklärung.html
@@ -159,7 +159,7 @@
 
     <h2>Hosting & Bereitstellung der Website</h2>
     <p>Die Website „HypoCare“ wird bei einem externen Dienstleister (Hosting-Anbieter) betrieben.<br>
-        Hosting-Anbieter: [Platzhalter – bitte nach Auswahl eintragen] <br>
+        Hosting-Anbieter: Render <br>
         Im Rahmen der Bereitstellung der Website verarbeitet der Hosting-Anbieter folgende Daten („Server-Logfiles“): <br>
         •	IP-Adresse des aufrufenden Geräts <br>
         •	Datum und Uhrzeit des Abrufs<br>
