Eingabelänge auf 200 geändert

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -194,7 +194,7 @@
             <div class="row">
               <div class="col-lg-12">
                 <div class="input-group" style="margin-bottom: 30px;">
-                  <input type="text" class="form-control" id="input" placeholder="z.B. Kopfschmerzen, Halsschmerzen, Müdigkeit, Fieber..." style="height: 60px; font-size: 18px; border-radius: 10px; border: 2px solid #eee;">
+                  <input type="text" class="form-control" id="input" placeholder="z.B. Kopfschmerzen, Halsschmerzen, Müdigkeit, Fieber..." maxlength="200" style="height: 60px; font-size: 18px; border-radius: 10px; border: 2px solid #eee;">
                 </div>
                 <div class="gradient-button" style="margin-bottom: 30px;">
                   <a href="#" onclick="sendeAnfrage(); return false;"><i class="fa fa-stethoscope"></i> Diagnose starten</a>
